# dasi

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  TODO  VERSION  setup.cfg
dasi/: CMakeLists.txt
dasi/src/dasi/: CMakeLists.txt  Dasi.cc  Dasi.h  Key.cc  Key.h  Query.cc  Query.h
dasi/src/dasi/api/: Dasi.cc  Dasi.h  Key.cc  Key.h  Query.cc  Query.h
dasi/src/dasi/api/detail/: ListGenerator.cc  (+3 more)
dasi/src/dasi/impl/: ListGeneratorImpl.cc
dasi/src/dasi/lib/: LibDasi.cc  LibDasi.h
dasi/src/dasi/tools/: CMakeLists.txt  DASITool.cc  DASITool.h  dasi-get.cc  dasi.in
dasi/tests/: CMakeLists.txt  simple_schema  test_key.cc  test_policydict.cc  test_query.cc  test_simple_archive.cc
docs/: acknowledgements.rst  conf.py  contacts.rst  index.rst  installation.rst  introduction.rst  license.rst  requirements.in  requirements.txt  usage.rst
docs/_autodoc/: dasi.rst  python.rst
docs/source/: api.rst  conf.py  index.rst  installation.rst  introduction.rst  modules.rst  python_api.rst  usage.rst
docs/source/gen_python_api/: dasi.Dasi.rst  dasi.Key.rst  dasi.List.rst  dasi.Query.rst  dasi.Retrieve.rst
examples/cryoem/: README.md  acquire.py  dasi-config.yml  microscope.py  plot.py
examples/histogram/: README.md  archive_data.py  dasi-config.yml  dasi.yml  directory_data.py  helper.py  image_data.py  retrieve_data.py  schema  wipe.py
examples/histogram/data/: mic_Feb03_12.26.11.tif  mic_Feb03_12.26.25.tif  mic_Feb03_12.26.44.tif  mic_Feb03_12.27.02.tif  mic_Feb03_12.27.02.tif.mdoc  mic_Feb03_12.27.21.tif
examples/lqcd/: README.md  dasi-config.yml  lqcd_hmc.sh  run_hmc.sh
examples/simple_s3/: CMakeLists.txt  README.md  dasi.yml  docker-compose.yml  s3credentials.yml
examples/simple_s3/include/: Metadata.h  Utils.h
examples/simple_s3/minio/certs/: private.key  public.crt
examples/simple_s3/src/: Archive.cc  Retrieve.cc
examples/weather/: CMakeLists.txt  README.md  dasi.yaml  dasi.yml  forecast.c  list.c  mean.c  query.c  schema  utils.h
pydasi/: .flake8  MANIFEST.in  README.md  pyproject.toml  setup.py
pydasi/dasi/: __init__.py  _dasi_cffi.py  dasi.py  dasi_cffi.h  key.py  list.py  log.py  query.py  retrieve.py
pydasi/dasi/cffi/: __init__.py  _dasi_cffi.py  dasi_cffi.h  findlib.py
pydasi/dasi/utils/: __init__.py  log.py  version.py
pydasi/src/: __init__.py  dasi.py  key.py  list.py  query.py  retrieve.py
pydasi/src/backend/: _dasi_cffi.py  findlib.py
pydasi/src/dasi/: __init__.py  dasi.py  key.py  list.py  query.py  retrieve.py  wipe.py
pydasi/src/dasi/backend/: __init__.py  _dasi_cffi.py  find_lib.py
pydasi/src/dasi/backend/include/: dasi_cffi.h
pydasi/src/dasi/utils/: __init__.py  config.py  log.py  version.py
pydasi/src/utils/: __init__.py  log.py  version.py
pydasi/tests/: test_dasi_archive_retrieve.py  test_dasi_config.py  test_dasi_import.py  test_dasi_key.py  test_dasi_list.py  test_dasi_query.py  test_import_dasi.py
pydasi/tools/: build_header.py
src/: CMakeLists.txt
src/dasi/: CMakeLists.txt  main.cc
src/dasi/api/: Config.cc  Config.h  Dasi.cc  Dasi.h  Handle.h  Key.cc  Key.h  ListResult.h  ObjectLocation.cc  ObjectLocation.h  Query.cc  Query.h  ReadHandle.h  Request.cc  Request.h  Result.cc  Result.h  RetrieveResult.cc  RetrieveResult.h  Schema.cc  Schema.h  SplitKey.cc  SplitKey.h  dasi_c.cc  dasi_c.h
src/dasi/api/c/: Dasi.cc  Dasi.h  Dasi_c.cc  Dasi_c.h
src/dasi/api/detail/: Generators.h  ListDetail.cc  ListDetail.h  PolicyDetail.cc  PolicyDetail.h  PurgeDetail.h  RetrieveDetail.cc  RetrieveDetail.h  WipeDetail.h
src/dasi/core/: AggregatedHandle.cc  AggregatedHandle.h  AggregatedReadHandle.cc  AggregatedReadHandle.h  ArchiveVisitor.cc  ArchiveVisitor.h  Archiver.cc  Archiver.h  Catalogue.cc  Catalogue.h  Colour.cc  Colour.h  ContainerIostream.h  DB.cc  DB.h  Exceptions.cc  Exceptions.h  FileReadHandle.cc  FileReadHandle.h  HandleFactory.cc  HandleFactory.h  IndentStream.h  KeyT.h  Lister.cc  Lister.h  OrderedKey.h  OrderedReferenceKey.h  Retriever.cc  Retriever.h  Schema.cc  Schema.h  SchemaKeyIterator.h  SplitKeyT.h  SplitReferenceKey.cc  SplitReferenceKey.h  Store.cc  Store.h  Test.h
src/dasi/impl/: ListGeneratorImpl.cc  ListGeneratorImpl.h  PolicyStatusGeneratorImpl.cc  PolicyStatusGeneratorImpl.h  PurgeGeneratorImpl.h  RetrieveResultImpl.cc  RetrieveResultImpl.h  WipeGeneratorImpl.h
src/dasi/lib/: LibDasi.cc  LibDasi.h  dasi_version.h.in
src/dasi/shelf/: ShelfCatalogue.cc  ShelfCatalogue.h
src/dasi/tools/: CMakeLists.txt  DASITool.cc  DASITool.h  Parser.cc  Parser.h  dasi-get.cc  dasi-info.cc  dasi-list.cc  dasi-policy.cc  dasi-put.cc  dasi-schema.cc  dasi-wipe.cc  dasi_get.cc  dasi_list.cc  dasi_put.cc
src/dasi/util/: AsyncGenerator.h  AutoCloser.h  Buffer.cc  Buffer.h  CartesianProduct.h  Colour.cc  Colour.h  ContainerIostream.h  Exceptions.cc  Exceptions.h  Generator.h  IndentStream.h  LRUMap.h  OrderedMap.h  ReverseAdapter.h  StringBuilder.h  Test.h
src/python-dasi/: __init__.py  _dasi.py  dasi.py  dasi_c.h
test/: CMakeLists.txt
test/api/: CMakeLists.txt  test_SplitKey.cc  test_dasi.cc  test_dasi_c.cc  test_key.cc  test_query.cc  test_request.cc  test_schema.cc
test/core/: CMakeLists.txt  test_CatalogueFactory.cc  test_IndentStream.cc  test_OrderedKey.cc  test_OrderedReferenceKey.cc  test_Schema.cc  test_SchemaKeyIterator.cc  test_SplitReferenceKey.cc  test_schema.cc
test/python-dasi/: CMakeLists.txt  run_tests.sh  test_dasi.py
test/shelf/: CMakeLists.txt  test_shelf.cc
test/tools/: CMakeLists.txt  dasi-config.yml.in  test_get.sh  test_list.sh  test_put.sh
test/util/: CMakeLists.txt  test_AsyncGenerator.cc  test_CartesianProduct.cc  test_IndentStream.cc  test_LRUMap.cc  test_OrderedMap.cc  test_ReverseAdapter.cc  test_StringBuilder.cc
tests/: CMakeLists.txt  helper.h  test_simple_archive.cc  test_simple_archive_c_api.cc
tests/api/: CMakeLists.txt  test_purge.cc  test_simple_archive.cc  test_wipe.cc
tests/c_api/: CMakeLists.txt  test_key.cc  test_purge.cc  test_query.cc  test_simple_archive.cc  test_wipe.cc
