[metadata]
name = dasi
version = file: VERSION
description = Data Access and Storage Interface
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/ecmwf-projects/dasi"
author = Simon Smart, Olivier Iffrig
license = Apache Software License 2.0

[options]
include_package_data = true
install_requires =
    cffi
    findlibs
packages = dasi
package_dir =
    dasi = src/python-dasi
tests_require =
    pytest
